Fixed issue with rows not collapsing

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -617,6 +617,7 @@ ul.ul-edu li .description p.type {font-size: 0.60rem;}
 
 .divResTable{
 	display: flex;
+  flex-flow: row wrap;
   margin: 1em 0 0 0;
   padding: 0;
   align-items: flex-start;
@@ -650,6 +651,7 @@ ul.ul-edu li .description p.type {font-size: 0.60rem;}
 }
 
 .divResTableCell {
+  padding: 10px;
 	box-sizing: border-box;
   width: 100%;  // Default to full width
   padding: 0.8em 1.2em;
